--- a/webapp/style.css
+++ b/webapp/style.css
@@ -78,7 +78,7 @@ margin-left: 20px;
 
 /* Add a background color on hover */
 .btn-group button:hover {
-    background-color: #EFDEE3;
+    background-color: #684551;
 }
 
 body{
