--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,6 +5,10 @@
         <title> data project </title>
         <link rel="stylesheet" type ="text/css" href = "../static/style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oxygen:300" rel="stylesheet">
+        <script type="text/javascript" src="{{url_for('static',filename='dostuff.js')}}"></script>
+        <script>var api_port = {{ api_port }};</script>
+
+
     </head>
     <body>
     <div id = "header">
@@ -13,9 +17,9 @@
 
     <div id ="sideleft">
         <div class="btn-group">
-            <a href="google.com"><button id="about"> ABOUT </button></a>
-            <a href=""><button id="byIndustry">BY INDUSTRY </button></a>
-            <a href=""><button id="byRace">BY RACIAL AND GENDER IDENTITY</button></a>
+            <button id="about"> ABOUT </button>
+            <button id="byIndustry">BY INDUSTRY </button>
+            <button id="byRace">BY RACIAL AND GENDER IDENTITY</button>
         </div>
         <!--<div id = "sidebar-btn">-->
             <!--<span></span>-->
@@ -25,12 +29,12 @@
     </div>
 
 
-  <div id = "abouttxt", style="text-align:center">
-    <pre><p style="font-size:16px;">This project allows you to sift through employment statistics collected from the US Bureau of Labor.
+  <div id = "abouttxt">
+    <p id = "abouttxtP1">This project allows you to sift through employment statistics collected from the US Bureau of Labor.
          We seek to make apparent dissimilarities in employment based on gender and race identity in the US,
          across a variety of government recognized industrial sectors.
 
-    Click on either industries or identities to begin. </p> </pre>
+    Click on either industries or identities to begin. </p>
   </div>
 
 
