--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -52,13 +52,11 @@ text-align: left;
 color: #4B5267;
 margin:0px;
 margin-left: 20px;
-
-
-  position: relative;
-  top: 50%;
-  -webkit-transform: auto;
-  -ms-transform: auto;
-  transform: auto;
+position: relative;
+top: 50%;
+-webkit-transform: auto;
+-ms-transform: auto;
+transform: auto;
 }
 
 
@@ -88,6 +86,7 @@ margin-left: 20px;
 body{
     background-color:#EFDEE3;
     Font-Family: 'Noto Serif', Serif;
+    height:100%;
 
 }
 
