--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -17,9 +17,9 @@
 
     <div id ="sideleft">
         <div class="btn-group">
-            <button id="about"> ABOUT </button>
-            <button id="byIndustry">BY INDUSTRY </button>
-            <button id="byRace">BY RACIAL AND GENDER IDENTITY</button>
+            <button class = "btn" id="about"> ABOUT </button>
+            <button class = "btn" id="byIndustry">BY INDUSTRY </button>
+            <button class = "btn" id="byRace">BY RACIAL AND GENDER IDENTITY</button>
         </div>
         <!--<div id = "sidebar-btn">-->
             <!--<span></span>-->
