--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -121,4 +121,4 @@ body{
     margin-left:20px;
 }
 
-table:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) {background-color: #f2f2f2;}
