--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -8,6 +8,21 @@
 
         <script>var api_port = {{ api_port }};</script>
 
+       <style>
+        table {
+        border-collapse: collapse;
+        width: 100%;
+        }
+
+        th, td {
+        text-align: left;
+        padding: 8px;
+        }
+
+        tr:nth-child(even) {background-color: #f2f2f2;}
+        </style>
+
+
 
     </head>
     <body>
