--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -51,8 +51,12 @@
   </div>
 
 
-    <div id="main">
-        <table id = "results_table"> </table>
+    <div id="industry_list">
+        <table id ="results_table"> </table>
+    </div>
+
+    <div id="identity_table">
+        <table id= ="identity_table"></table>
     </div>
 
 
