--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -50,12 +50,12 @@
     Click on either industries or identities to begin. </p>
   </div>
 
-    <div id="identity_table">
+    <div id="identity_table_div">
         <table id= ="identity_table"></table>
     </div>
 
-    <div id="industry_list">
-        <table id ="results_table"> </table>
+    <div id="industry_table_div">
+        <table id ="industry_table"> </table>
     </div>
 
 
