--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -51,7 +51,7 @@
   </div>
 
     <div id="identity_table_div">
-        <table id= ="identity_table"></table>
+        <table id="identity_table"></table>
     </div>
 
     <div id="industry_table_div">
