--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -32,7 +32,7 @@
 
     <div id ="sideleft">
         <div class="btn-group">
-            <button class = "btn" id="about"> ABOUT </button>
+            <button class = "btn active" id="about"> ABOUT </button>
             <button class = "btn" id="byIndustry">BY INDUSTRY </button>
             <button class = "btn" id="byRace">BY RACIAL AND GENDER IDENTITY</button>
         </div>
