throw a book at a wall

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -58,6 +58,12 @@
         <table id ="industry_table"> </table>
     </div>
 
+    <div id="specific_id_table_div">
+        <table id="specific_id_table">
+
+        </table>
+    </div>
+
 
 
 
