--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -51,11 +51,11 @@
   </div>
 
     <div id="identity_table_div">
-        <table id="identity_table"></table>
+        <table class="w3-table-all w3-hoverable" id="identity_table"></table>
     </div>
 
     <div id="industry_table_div">
-        <table id ="industry_table"> </table>
+        <table class="w3-table-all w3-hoverable" id ="industry_table"> </table>
     </div>
 
     <div id="specific_id_table_div">
