--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -20,6 +20,7 @@
         }
 
         tr:nth-child(even) {background-color: #f2f2f2;}
+        tr:hover {background-color:#f5f5f5;}
         </style>
 
 
@@ -51,11 +52,11 @@
   </div>
 
     <div id="identity_table_div">
-        <table class="w3-table-all w3-hoverable" id="identity_table"></table>
+        <table id="identity_table"></table>
     </div>
 
     <div id="industry_table_div">
-        <table class="w3-table-all w3-hoverable" id ="industry_table"> </table>
+        <table id ="industry_table"> </table>
     </div>
 
     <div id="specific_id_table_div">
