--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -20,7 +20,7 @@
         }
 
         tr:nth-child(even) {background-color: #f2f2f2;}
-        tr:hover {background-color:#f5f5f5;}
+        tr:hover {background-color: #fff4d8;}
         </style>
 
 
