--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -134,7 +134,7 @@ body{
 }
 table{
     overflow-y:scroll;
-    height:100px;
+    height:100%;
     display:block;
 }
 tr:nth-child(even) {background-color: #f2f2f2;}
