--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -11,18 +11,18 @@
             var api_port = {{ api_port }};
 
             function onlyAbout() {
-                document.getElementById("byIndustry").style.display = "none";
-                document.getElementById("byRace").style.display = "none";
+                document.getElementById("industry_table_div").style.display = "none";
+                document.getElementById("identity_table_div").style.display = "none";
             }
 
             function onlyIndustry() {
-                document.getElementById("byIndustry").style.display = "block";
-                document.getElementById("byRace").style.display = "none";
+                document.getElementById("industry_table_div").style.display = "block";
+                document.getElementById("identity_table_div").style.display = "none";
             }
 
             function onlyRace() {
-                document.getElementById("byIndustry").style.display = "none";
-                document.getElementById("byRace").style.display = "block";
+                document.getElementById("industry_table_div").style.display = "none";
+                document.getElementById("identity_table_div").style.display = "block";
             }
 
         </script>
