--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -13,6 +13,7 @@
             function onlyAbout() {
                 document.getElementById("industry_table_div").style.display = "none";
                 document.getElementById("identity_table_div").style.display = "none";
+                document.getElementById("specific_id_table_div").style.display = "none";
             }
 
             function onlyIndustry() {
@@ -79,15 +80,13 @@
     </div>
 
     <div id="specific_id_table_div">
-        <table id="specific_id_table">
-
-        </table>
+        <table id="specific_id_table"></table>
     </div>
 
-
-
-
-
+    <div id="race_distribution_div">
+        <table id="race_distribution_table"></table>
+    </div>
+    
   </div>
 
 
