--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -14,16 +14,21 @@
                 document.getElementById("industry_table_div").style.display = "none";
                 document.getElementById("identity_table_div").style.display = "none";
                 document.getElementById("specific_id_table_div").style.display = "none";
+                document.getElementById("race_distribution_div").style.display = "none";
             }
 
             function onlyIndustry() {
                 document.getElementById("industry_table_div").style.display = "block";
                 document.getElementById("identity_table_div").style.display = "none";
+                document.getElementById("specific_id_table_div").style.display = "none";
+                document.getElementById("race_distribution_div").style.display = "none";
             }
 
             function onlyRace() {
                 document.getElementById("industry_table_div").style.display = "none";
                 document.getElementById("identity_table_div").style.display = "block";
+                document.getElementById("specific_id_table_div").style.display = "none";
+                document.getElementById("race_distribution_div").style.display = "none";
             }
 
         </script>
