--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -31,7 +31,12 @@
                 document.getElementById("race_distribution_div").style.display = "none";
             }
 
+
+
         </script>
+
+        <script type="text/javascript" src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+        <script type="text/javascript" src="https://www.amcharts.com/lib/3/serial.js"></script>
 
        <style>
         table {
@@ -52,6 +57,7 @@
 
     </head>
     <body>
+
     <div id = "header">
         <h3>NACP-2 WOMEN AND MINORITIES IN THE WORKFORCE</h3>
     </div>
