--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -155,3 +155,28 @@ table{
     display:block;
 }
 tr:nth-child(even) {background-color: #f2f2f2;}
+
+body {
+    font-family: Verdana;
+    font-size: 12px;
+    padding: 10px;
+}
+
+#chartdiv {
+    width: 100%;
+    height: 500px;
+    font-size: 11px;
+}
+
+#data,
+#data th,
+#data td {
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+#data th {
+    font-weight: bold;
+    background-color: #eee;
+}
+
