--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -93,6 +93,57 @@
 
     <div id="race_distribution_div">
         <table id="race_distribution_table"></table>
+        <table id="industry_numbers">
+            <tr>
+                <th>NAICS-2 Code</th>
+                <th>Designation</th>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Agriculture, Forestry, Fishing and Hunting</td>
+            </tr>
+            <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+            </tr>
+            <tr>
+                <td>21</td>
+                <td>Mining, Quarrying, and Oil and Gas Extraction</td>
+            </tr>
+            <tr>
+                <td>22</td>
+                <td>Utilities</td>
+            </tr>
+            <tr>
+                <td>23</td>
+                <td>Construction</td>
+            </tr>
+            <tr>
+                <td>31-33</td>
+                <td>Manufacturing</td>
+            </tr>
+            <tr>
+                <td>42</td>
+                <td>Wholesale Trade</td>
+            </tr>
+            <tr>
+                <td>44-45</td>
+                <td>Retail Trade</td>
+            </tr>
+            <tr>
+                <td>48-49</td>
+                <td>Transportation and Warehousing</td>
+            </tr>
+            <tr>
+                <td>51</td>
+                <td>Information</td>
+            </tr>
+            <tr>
+                <td>52</td>
+                <td>Finance and Insurance</td>
+            </tr>
+        </table>
+        </table>
     </div>
 
   </div>
