--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -138,7 +138,47 @@
                 <td>52</td>
                 <td>Finance and Insurance</td>
             </tr>
-        </table>
+            <tr>
+                <td>53</td>
+                <td>Real Estate and Rental and Leasing</td>
+            </tr>
+            <tr>
+                <td>54</td>
+                <td>Professional, Scientific, and Technical Services</td>
+            </tr>
+            <tr>
+                <td>55</td>
+                <td>Management of Companies and Enterprises</td>
+            </tr>
+            <tr>
+                <td>56</td>
+                <td>Administrative and Support and Waste Management and Remediation Services</td>
+            </tr>
+            <tr>
+            <td>61</td>
+            <td>Educational Services</td>
+        </tr>
+            <tr>
+                <td>62</td>
+                <td>Health Care and Social Assistance</td>
+            </tr>
+            <tr>
+                <td>71</td>
+                <td>Arts, Entertainment, and Recreation</td>
+            </tr>
+            <tr>
+                <td>72</td>
+                <td>Accommodation and Food Services</td>
+            </tr>
+            <tr>
+                <td>81</td>
+                <td>Other Services (except Public Administration)</td>
+            </tr>
+            <tr>
+                <td>62</td>
+                <td>Public Administration</td>
+            </tr>
+
         </table>
     </div>
 
