adding new table margins

--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -137,6 +137,14 @@ body{
     margin-left:200px;
 }
 
+#race_distribution_div{
+    margin-left:200px;
+}
+
+#industry_numbers{
+    margin-left:20px;
+}
+
 #specific_id_table{
     margin-left:20px;
 }
